kustomize/ephemeral-base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cks-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cks-frontend
  template:
    metadata:
      labels:
        app: cks-frontend
    spec:
      containers:
        - name: cks-frontend
          image: registry.toolz.fullstack.pw/library/cks-frontend:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
